--- a/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
+++ b/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ijGTtJujfpio"
       },
@@ -107,10 +107,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "9OmGuxk1gtZ1",
-        "outputId": "c031912f-19a8-427d-a5af-8397f04d6850",
+        "outputId": "aac810fd-ba15-41a5-e4c8-0245e4457d45",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "CeLS0t7Ug9wW"
       },
@@ -239,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "CkQ_XWC2gwpa"
       },
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "CSAlDbv6socE"
       },
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "diHhlv0CiZdg"
       },
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "KqRhgdDqjnIq"
       },
@@ -487,7 +487,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "J62IlR_BpFxh"
       },
@@ -538,7 +538,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "-M_PZHC8pk81"
       },
@@ -902,7 +902,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "V1KydJKIsHPD"
       },
@@ -925,7 +925,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "RxeGRnJ_sonE"
       },
@@ -939,7 +939,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "7jb2VScDwZoz"
       },
@@ -969,7 +969,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "wVgdiYDcJeZb"
       },
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "6NHkEsCWHKgf"
       },
@@ -1026,7 +1026,7 @@
       "metadata": {
         "id": "LLsPToMuTwMN"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1052,7 +1052,7 @@
       "metadata": {
         "id": "Za_BHlgJUEVF"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1067,7 +1067,7 @@
       "metadata": {
         "id": "b9IwcW5RUFQe"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1079,7 +1079,7 @@
       "metadata": {
         "id": "pJqwXm8MUJS8"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1093,7 +1093,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "mJWd2PovMMKn"
       },
@@ -1149,7 +1149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "yuzrAWU-S7_i"
       },
@@ -1178,7 +1178,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "H-xaDVWcfzRw"
       },
@@ -1232,108 +1232,15 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "KI00gTsbCG6k",
-        "outputId": "17fcf4d8-475b-4e4d-d7ce-fd9c1f5edf13",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "KI00gTsbCG6k"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[REWARD] 0.00\n",
-            "[RETURN] [0. 0. 0. 0. 0.]\n",
-            "[STEP] 1\n",
-            "[REWARD] 0.86\n",
-            "[RETURN] [0.7782971 0.        0.        0.        0.       ]\n",
-            "[STEP] 1\n",
-            "[REWARD] 0.13\n",
-            "[RETURN] [0.19371364 0.         0.         0.         0.        ]\n",
-            "[STEP] 1\n",
-            "Iteration 50...\n",
-            "Iteration mean reward: 0.98\n",
-            "[REWARD] 0.00\n",
-            "[RETURN] [0.02133174 0.         0.         0.         0.        ]\n",
-            "[STEP] 3\n",
-            "level: 3\n",
-            "[REWARD] 0.49\n",
-            "[RETURN] [0.02133174 0.         0.44262293 0.         0.        ]\n",
-            "[STEP] 4\n",
-            "level: 4\n",
-            "Iteration 100...\n",
-            "Iteration mean reward: 0.29\n",
-            "[REWARD] 0.29\n",
-            "[RETURN] [0.02133174 0.         0.44262293 0.2622857  0.        ]\n",
-            "[STEP] 3\n",
-            "[REWARD] 0.03\n",
-            "[RETURN] [0.02133174 0.         0.07151888 0.2622857  0.        ]\n",
-            "[STEP] 4\n",
-            "[REWARD] 0.10\n",
-            "[RETURN] [0.02133174 0.         0.07151888 0.117346   0.        ]\n",
-            "[STEP] 4\n",
-            "Iteration 150...\n",
-            "Iteration mean reward: 0.36\n",
-            "[REWARD] 0.02\n",
-            "[RETURN] [0.02133174 0.         0.07151888 0.032542   0.        ]\n",
-            "[STEP] 3\n",
-            "[REWARD] 0.11\n",
-            "[RETURN] [0.02133174 0.         0.10783841 0.032542   0.        ]\n",
-            "[STEP] 3\n",
-            "Iteration 200...\n",
-            "Iteration mean reward: 0.69\n",
-            "[REWARD] 0.06\n",
-            "[RETURN] [0.02133174 0.         0.06404452 0.032542   0.        ]\n",
-            "[STEP] 3\n",
-            "[REWARD] 0.03\n",
-            "[RETURN] [0.02133174 0.         0.03683304 0.032542   0.        ]\n",
-            "[STEP] 3\n",
-            "[REWARD] 0.03\n",
-            "[RETURN] [0.02133174 0.         0.02674757 0.032542   0.        ]\n",
-            "[STEP] 4\n",
-            "Iteration 250...\n",
-            "Iteration mean reward: 0.46\n",
-            "[REWARD] 0.04\n",
-            "[RETURN] [0.02133174 0.         0.02674757 0.0398129  0.        ]\n",
-            "[STEP] 4\n",
-            "[REWARD] 0.01\n",
-            "[RETURN] [0.02133174 0.         0.02674757 0.01139387 0.        ]\n",
-            "[STEP] 3\n",
-            "Iteration 300...\n",
-            "Iteration mean reward: 0.74\n",
-            "[REWARD] 0.01\n",
-            "[RETURN] [0.02133174 0.         0.01133239 0.01139387 0.        ]\n",
-            "[STEP] 3\n",
-            "[REWARD] 0.03\n",
-            "[RETURN] [0.02133174 0.         0.03079906 0.01139387 0.        ]\n",
-            "[STEP] 5\n",
-            "level: 5\n",
-            "[REWARD] 0.28\n",
-            "[RETURN] [0.02133174 0.         0.03079906 0.01139387 0.24963504]\n",
-            "[STEP] 5\n",
-            "Iteration 350...\n",
-            "Iteration mean reward: 0.37\n",
-            "[REWARD] 0.06\n",
-            "[RETURN] [0.02133174 0.         0.03079906 0.01139387 0.08157847]\n",
-            "[STEP] 5\n",
-            "[REWARD] 0.00\n",
-            "[RETURN] [0.02133174 0.         0.03079906 0.01139387 0.01026993]\n",
-            "[STEP] 3\n",
-            "Iteration 400...\n",
-            "Iteration mean reward: 0.79\n",
-            "[REWARD] 0.01\n",
-            "[RETURN] [0.02133174 0.         0.01448369 0.01139387 0.01026993]\n",
-            "[STEP] 1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "rng_key = jax.random.PRNGKey(10)\n",
         "\n",
-        "teacher = OnlineTeacher(action_space = 5, alpha = 0.9, epsilon = 0.3)\n",
+        "teacher = OnlineTeacher(action_space=5, alpha=0.9, epsilon=0.3)\n",
         "\n",
-        "student_env = StudentEnv(teacher = teacher, action_space = 5)\n",
+        "student_env = StudentEnv(teacher=teacher, action_space=5)\n",
         "\n",
         "ppo_trainer = PPOTrainer(\n",
         "  policy_class=DiscretePPOPolicy,\n",
@@ -1341,7 +1248,7 @@
         "  agent_state_factory=_make_agent_state,\n",
         "  get_iter_level = student_env.get_iter_level, #environment method\n",
         "  get_max_iter_steps = lambda x: x+2 if x<5 else x+3, #nb scrambles +2 for 1..4 and +3 for 5..\n",
-        "  cl_gen_freq=20, #check for change in level each 10 iter\n",
+        "  cl_gen_freq=10, #check for change in level each 10 iter\n",
         "  num_iteration=1500,\n",
         "  num_sgd_iteration=8,\n",
         "  learning_rate=0.0001,\n",
@@ -1355,7 +1262,7 @@
         "  value_clip=0.1,\n",
         "  use_gae=True,\n",
         "  apply_value_clipping=True,\n",
-        "  checkpoint_freq=50,\n",
+        "  checkpoint_freq=25,\n",
         "  deque_length=10,\n",
         "  render=False,\n",
         "  strategy=\"stack_colors\",\n",
@@ -1375,99 +1282,58 @@
       "metadata": {
         "id": "Gob1sN55bvmd"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "logits = listify(teacher.get_record())\n",
-        "with open(\"acl_logits.json\", \"w\") as f:\n",
-        "  json.dump({\n",
-        "      \"logits\": logits\n",
-        "  }, f, indent=4)"
+        "logits = teacher.get_record()"
       ],
       "metadata": {
-        "id": "7x9JWN_Hb9eH"
+        "id": "8W_JIaefgU2y"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TKYAQHTppyqJ"
-      },
-      "outputs": [],
       "source": [
         "levels = [record for record in student_env._training_record]"
-      ]
+      ],
+      "metadata": {
+        "id": "SQo1udQAgWZA"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AOKrKFbmszZe"
+        "id": "MC98yD_HFodF"
       },
       "outputs": [],
       "source": [
-        "plot_rewards(rewards, levels)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MC98yD_HFodF",
-        "outputId": "223d9557-6f7f-4fa0-a8cc-b249e3003ace"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Iteration 25...\n",
-            "Iteration mean reward: 1.00\n",
-            "Iteration 50...\n",
-            "Iteration mean reward: 1.00\n",
-            "Iteration 75...\n",
-            "Iteration mean reward: 0.97\n",
-            "Iteration 100...\n",
-            "Iteration mean reward: 0.96\n",
-            "Iteration 125...\n",
-            "Iteration mean reward: 0.82\n",
-            "Iteration 150...\n",
-            "Iteration mean reward: 0.76\n",
-            "Iteration 175...\n",
-            "Iteration mean reward: 0.59\n",
-            "Iteration 200...\n",
-            "Iteration mean reward: 0.57\n",
-            "Iteration 225...\n",
-            "Iteration mean reward: 0.19\n",
-            "Iteration 250...\n",
-            "Iteration mean reward: 0.31\n"
-          ]
-        }
-      ],
-      "source": [
         "rng_key = jax.random.PRNGKey(10)\n",
-        "ppo_trainer.eval(rng_key,num_iter=250, eval_level_gen_freq=50, get_eval_iter_level= lambda x: x//50 +1)\n",
+        "ppo_trainer.eval(rng_key,num_iter=150, eval_level_gen_freq=50, get_eval_iter_level= lambda x: x//50 +1)\n",
         "eval_rewards = ppo_trainer.get_eval_record()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "np.save('eval_rewards_1500',eval_rewards)"
+        "with open(\"acl_5_logits_levels_eval.json\", \"w\") as f:\n",
+        "  json.dump({\n",
+        "      \"logits\": listify(logits),\n",
+        "      \"levels\": listify(levels),\n",
+        "      \"eval_rewards\": listify(eval_rewards)\n",
+        "  }, f, indent=4)"
       ],
       "metadata": {
-        "id": "BuDCpMCE7Q0W"
+        "id": "7x9JWN_Hb9eH"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": []
     },
     {
