AutoCL-3 with sampling method

--- a/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
+++ b/notebooks/Rubik_Cube_ppo_AutoCL.ipynb
@@ -110,7 +110,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "9OmGuxk1gtZ1",
-        "outputId": "aac810fd-ba15-41a5-e4c8-0245e4457d45",
+        "outputId": "06204b67-c408-42e8-8d8e-674d24777d03",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1185,10 +1185,11 @@
       "outputs": [],
       "source": [
         "class OnlineTeacher(Teacher):\n",
-        "  def __init__(self, action_space, alpha, epsilon):\n",
-        "    super(OnlineTeacher, self).__init__( action_space)\n",
+        "  def __init__(self, action_space, alpha, epsilon, sampling=True):\n",
+        "    super(OnlineTeacher, self).__init__(action_space)\n",
         "    self._alpha = alpha\n",
         "    self._epsilon = epsilon\n",
+        "    self._sampling = sampling\n",
         "    self._return_record = jnp.array([])\n",
         "    self._return = jnp.zeros(self._action_space)\n",
         "\n",
@@ -1207,10 +1208,14 @@
         "  def step(self):\n",
         "    p = np.random.random()\n",
         "    if p < self._epsilon:\n",
-        "      action = np.random.choice(self._action_space)\n",
+        "      if self._sampling:\n",
+        "        probabilities = np.exp(self._return) / np.sum(np.exp(self._return))\n",
+        "        action = np.random.choice(len(probabilities), p=probabilities) + 1\n",
+        "      else:\n",
+        "        action = np.random.choice(self._action_space)\n",
         "    else:\n",
-        "      action = jnp.argmax(self._return)\n",
-        "    action = action+1\n",
+        "      action = jnp.argmax(self._return) + 1\n",
+        "\n",
         "    print(f'[RETURN] {self._return}')\n",
         "    print(f'[STEP] {action}')\n",
         "    return action\n",
@@ -1230,17 +1235,300 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "KI00gTsbCG6k"
+        "id": "KI00gTsbCG6k",
+        "outputId": "c638a8f7-65a0-4004-c0c9-7b00a3f89a02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[REWARD] 0.00\n",
+            "[RETURN] [0. 0. 0.]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.   0.03 0.  ]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.         0.01995652 0.        ]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.         0.01995652 0.03579545]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.         0.01995652 0.02385776]\n",
+            "[STEP] 3\n",
+            "Iteration 25...\n",
+            "Iteration mean reward: 0.03\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.         0.01995652 0.01258282]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.11\n",
+            "[RETURN] [0.         0.10042006 0.01258282]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.06\n",
+            "[RETURN] [0.         0.06509394 0.01258282]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.12\n",
+            "[RETURN] [0.         0.1166289  0.01258282]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.06\n",
+            "[RETURN] [0.         0.06770837 0.01258282]\n",
+            "[STEP] 1\n",
+            "Iteration 50...\n",
+            "Iteration mean reward: 0.92\n",
+            "[REWARD] 0.92\n",
+            "[RETURN] [0.8262992  0.06770837 0.01258282]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.28\n",
+            "[RETURN] [0.8262992  0.25779212 0.01258282]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.05\n",
+            "[RETURN] [0.1271099  0.25779212 0.01258282]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.31\n",
+            "[RETURN] [0.1271099  0.25779212 0.28387734]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.09\n",
+            "[RETURN] [0.1271099  0.25779212 0.1068965 ]\n",
+            "[STEP] 2\n",
+            "Iteration 75...\n",
+            "Iteration mean reward: 0.84\n",
+            "[REWARD] 0.19\n",
+            "[RETURN] [0.1271099 0.1940314 0.1068965]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.1271099 0.0221722 0.1068965]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.02159881 0.0221722  0.1068965 ]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00265523 0.0221722  0.1068965 ]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.005053  0.0221722 0.1068965]\n",
+            "[STEP] 3\n",
+            "Iteration 100...\n",
+            "Iteration mean reward: 0.48\n",
+            "[REWARD] 0.05\n",
+            "[RETURN] [0.005053   0.0221722  0.05872152]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.005053   0.03668655 0.05872152]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.005053   0.03668655 0.03130408]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.06\n",
+            "[RETURN] [0.005053   0.05615203 0.03130408]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.005053   0.0107776  0.03130408]\n",
+            "[STEP] 3\n",
+            "Iteration 125...\n",
+            "Iteration mean reward: 0.62\n",
+            "[REWARD] 0.16\n",
+            "[RETURN] [0.005053  0.0107776 0.1506695]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.005053   0.0107776  0.02466003]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00153983 0.0107776  0.02466003]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.06\n",
+            "[RETURN] [0.00153983 0.0107776  0.05430747]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00930477 0.0107776  0.05430747]\n",
+            "[STEP] 3\n",
+            "Iteration 150...\n",
+            "Iteration mean reward: 0.62\n",
+            "[REWARD] 0.07\n",
+            "[RETURN] [0.00930477 0.0107776  0.07113875]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00930477 0.0107776  0.03167744]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00930477 0.0107776  0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00930477 0.00879303 0.00619714]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00500604 0.00879303 0.00619714]\n",
+            "[STEP] 2\n",
+            "Iteration 175...\n",
+            "Iteration mean reward: 0.93\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00500604 0.01604585 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00500604 0.01355801 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00500604 0.0094999  0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00500604 0.01591918 0.00619714]\n",
+            "[STEP] 1\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.01591918 0.00619714]\n",
+            "[STEP] 2\n",
+            "Iteration 200...\n",
+            "Iteration mean reward: 0.92\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00540631 0.02192258 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.01117471 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00748659 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.03864586 0.00619714]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.01496577 0.00619714]\n",
+            "[STEP] 3\n",
+            "Iteration 225...\n",
+            "Iteration mean reward: 0.63\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.01496577 0.02482847]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.01496577 0.03784407]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.01496577 0.02661049]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.01496577 0.01015986]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.0065763  0.01015986]\n",
+            "[STEP] 3\n",
+            "Iteration 250...\n",
+            "Iteration mean reward: 0.66\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.0065763  0.04010001]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.0065763  0.03659583]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00540631 0.00250052 0.03659583]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00250052 0.01626146]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00812641 0.01626146]\n",
+            "[STEP] 3\n",
+            "Iteration 275...\n",
+            "Iteration mean reward: 0.67\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.00812641 0.0391577 ]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00540631 0.00812641 0.0206321 ]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00812641 0.01450743]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00540631 0.00812641 0.00497211]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00540631 0.01551597 0.00497211]\n",
+            "[STEP] 2\n",
+            "Iteration 300...\n",
+            "Iteration mean reward: 0.96\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.01021063 0.00497211]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.02805542 0.00497211]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.03043857 0.00497211]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.04\n",
+            "[RETURN] [0.00540631 0.03479161 0.00497211]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.03479161 0.01177542]\n",
+            "[STEP] 2\n",
+            "Iteration 325...\n",
+            "Iteration mean reward: 0.95\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.0138533  0.01177542]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00759953 0.01177542]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.00759953 0.02367757]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00759953 0.01135847]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.00759953 0.02803803]\n",
+            "[STEP] 3\n",
+            "Iteration 350...\n",
+            "Iteration mean reward: 0.72\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00759953 0.01480921]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00759953 0.01061706]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.03\n",
+            "[RETURN] [0.00540631 0.00759953 0.03061573]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.09\n",
+            "[RETURN] [0.00540631 0.00759953 0.0825461 ]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.05\n",
+            "[RETURN] [0.00540631 0.00759953 0.05363485]\n",
+            "[STEP] 2\n",
+            "Iteration 375...\n",
+            "Iteration mean reward: 0.97\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00540631 0.02164862 0.05363485]\n",
+            "[STEP] 3\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00540631 0.02164862 0.00827164]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.01\n",
+            "[RETURN] [0.00540631 0.00831468 0.00827164]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.02\n",
+            "[RETURN] [0.00540631 0.01846227 0.00827164]\n",
+            "[STEP] 2\n",
+            "[REWARD] 0.00\n",
+            "[RETURN] [0.00540631 0.00418458 0.00827164]\n",
+            "[STEP] 3\n",
+            "Iteration 400...\n",
+            "Iteration mean reward: 0.71\n"
+          ]
+        }
+      ],
       "source": [
         "rng_key = jax.random.PRNGKey(10)\n",
         "\n",
-        "teacher = OnlineTeacher(action_space=5, alpha=0.9, epsilon=0.3)\n",
+        "teacher = OnlineTeacher(action_space=3, alpha=0.9, epsilon=0.3, sampling=True)\n",
         "\n",
-        "student_env = StudentEnv(teacher=teacher, action_space=5)\n",
+        "student_env = StudentEnv(teacher=teacher, action_space=3)\n",
         "\n",
         "ppo_trainer = PPOTrainer(\n",
         "  policy_class=DiscretePPOPolicy,\n",
@@ -1248,8 +1536,8 @@
         "  agent_state_factory=_make_agent_state,\n",
         "  get_iter_level = student_env.get_iter_level, #environment method\n",
         "  get_max_iter_steps = lambda x: x+2 if x<5 else x+3, #nb scrambles +2 for 1..4 and +3 for 5..\n",
-        "  cl_gen_freq=10, #check for change in level each 10 iter\n",
-        "  num_iteration=1500,\n",
+        "  cl_gen_freq=5, #check for change in level each 10 iter\n",
+        "  num_iteration=400,\n",
         "  num_sgd_iteration=8,\n",
         "  learning_rate=0.0001,\n",
         "  policy_clip=0.2,\n",
@@ -1277,12 +1565,12 @@
     {
       "cell_type": "code",
       "source": [
-        "save_record(\"acl_for_5_stack_colors\", listify(rewards), {key:listify(val) for key, val in losses.items()})"
+        "save_record(\"acl_for_3_stack_colors_sampling\", listify(rewards), {key:listify(val) for key, val in losses.items()})"
       ],
       "metadata": {
         "id": "Gob1sN55bvmd"
       },
-      "execution_count": 24,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -1293,7 +1581,7 @@
       "metadata": {
         "id": "8W_JIaefgU2y"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -1304,26 +1592,49 @@
       "metadata": {
         "id": "SQo1udQAgWZA"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
-        "id": "MC98yD_HFodF"
+        "id": "MC98yD_HFodF",
+        "outputId": "0ba51795-656b-4aba-8605-6d216643e9e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Iteration 25...\n",
+            "Iteration mean reward: 1.00\n",
+            "Iteration 50...\n",
+            "Iteration mean reward: 1.00\n",
+            "Iteration 75...\n",
+            "Iteration mean reward: 0.97\n",
+            "Iteration 100...\n",
+            "Iteration mean reward: 0.95\n",
+            "Iteration 125...\n",
+            "Iteration mean reward: 0.71\n",
+            "Iteration 150...\n",
+            "Iteration mean reward: 0.68\n"
+          ]
+        }
+      ],
       "source": [
         "rng_key = jax.random.PRNGKey(10)\n",
-        "ppo_trainer.eval(rng_key,num_iter=150, eval_level_gen_freq=50, get_eval_iter_level= lambda x: x//50 +1)\n",
+        "ppo_trainer.eval(rng_key, num_iter=150, eval_level_gen_freq=50, get_eval_iter_level= lambda x: x//50 +1)\n",
         "eval_rewards = ppo_trainer.get_eval_record()"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "with open(\"acl_5_logits_levels_eval.json\", \"w\") as f:\n",
+        "with open(\"acl_5_logits_levels_eval_sampling.json\", \"w\") as f:\n",
         "  json.dump({\n",
         "      \"logits\": listify(logits),\n",
         "      \"levels\": listify(levels),\n",
@@ -1333,7 +1644,7 @@
       "metadata": {
         "id": "7x9JWN_Hb9eH"
       },
-      "execution_count": 40,
+      "execution_count": 28,
       "outputs": []
     },
     {
